Fix positioning for the drawer and add a scrollbar.

--- a/components/notification-drawer/notification-drawer.css
+++ b/components/notification-drawer/notification-drawer.css
@@ -12,8 +12,7 @@
 
 body {
   margin: 0px;
-  /* background-color: red; */
-  position: absolute;
+  /* position: absolute; */
   bottom: 0;
 }
 .notification {
@@ -82,22 +81,16 @@ body {
     background-color: rgb(126, 126, 19);
   }
 }
-
-/* Notification Centre CSS */
-#notification-center {
-  display: grid;
-  grid-template-rows: 2fr 2fr;
+::-webkit-scrollbar {
+  width: 12px;
 }
 
-#notification-center__header {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-#notification-center__notifications {
-  display: grid;
-  grid-template-rows: 3fr 1fr;
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
 }
 
-#notification-center__notification-detail {
-  background-color: black;
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
